--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "shopping website",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack",
+    "watch": "webpack -w",
+    "start": "webpack-dev-server --mode development --open"
   },
   "repository": {
     "type": "git",
@@ -15,5 +18,25 @@
   "bugs": {
     "url": "https://github.com/NoeldVisard/JS-Course-Project-2-Karimov/issues"
   },
-  "homepage": "https://github.com/NoeldVisard/JS-Course-Project-2-Karimov#readme"
+  "homepage": "https://github.com/NoeldVisard/JS-Course-Project-2-Karimov#readme",
+  "devDependencies": {
+    "@babel/core": "^7.16.5",
+    "@babel/preset-env": "^7.16.5",
+    "babel-loader": "^8.2.3",
+    "css-loader": "^6.5.1",
+    "html-webpack-plugin": "^5.5.0",
+    "sass-loader": "^12.4.0",
+    "style-loader": "^3.3.1",
+    "vue": "^2.6.14",
+    "vue-loader": "^15.9.8",
+    "vue-loader-plugin": "^1.3.0",
+    "vue-template-compiler": "^2.6.14",
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.6.0"
+  },
+  "dependencies": {
+    "vue-router": "^3.5.3",
+    "vuex": "^3.6.2"
+  }
 }
